--- a/TABLAS/MARCAS/static/CSS/style.css
+++ b/TABLAS/MARCAS/static/CSS/style.css
@@ -231,7 +231,7 @@ tr td {
 }
 
 /*-------------------------------------------------------------------------------------------------------------------------*/
-/* From Uiverse.io by yashasvi9199 */ 
+/*------------------- login Andia--------------------------*/ 
 .form {
     display: flex;
     flex-direction: column;
@@ -242,12 +242,19 @@ tr td {
     background-color: #171717;
     border-radius: 15px;
     transition: 0.4s ease-in-out;
+    margin: auto; /* Centra el formulario */
+    max-width: 400px; /* Ancho máximo del formulario */
+    width: 100%; /* Permite que el formulario ocupe el 100% del ancho disponible hasta el máximo */
 }
 
 .card {
-    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
-    border-radius: 22px;
+    background-image: linear-gradient(163deg, #f13d0694 0%, #e06908 100%);
+    border-radius: 40px;
     transition: all 0.3s;
+    padding: 10px; /* Espaciado interno para la tarjeta */
+    margin: auto; /* Centra el formulario */
+    max-width: 400px; /* Ancho máximo del formulario */
+    width: 100%;
 }
 
 .card2 {
@@ -261,7 +268,7 @@ tr td {
 }
 
 .card:hover {
-    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.3);
+    box-shadow: 0px 0px 30px 1px rgba(245, 25, 25, 0.918);
 }
 
 #heading {
@@ -313,13 +320,13 @@ tr td {
     border: none;
     outline: none;
     transition: 0.4s ease-in-out;
-    background-color: #252525;
+    background-color: #030000;
     color: white;
 }
 
 .button1:hover, .button2:hover {
-    background-color: black;
-    color: white;
+    background-color: rgb(236, 226, 226);
+    color: rgba(139, 129, 129, 0.76);
 }
 
 .button3 {
@@ -330,3 +337,5 @@ tr td {
     background-color: red;
     color: white;
 }
+/*------------------- login Andia--------------------------*/ 
+/*------------------- insertar css de lo que se hace aki --------------------------*/ 
