--- a/TABLAS/MARCAS/templates/registration/login.html
+++ b/TABLAS/MARCAS/templates/registration/login.html
@@ -53,10 +53,9 @@
                     />
                 </div>
                 <div class="btn">
-                    <button class="button1" type="submit">Login</button>
-                    <button class="button2">Sign Up</button>
+                    <button class="button1" type="submit">acceso</button>
                 </div>
-                <button class="button3">Forgot Password</button>
+                <button class="button3">olvide contraseña</button>
             </form>
         </div>
     </div>
