--- a/TABLAS/MARCAS/templates/registration/login.html
+++ b/TABLAS/MARCAS/templates/registration/login.html
@@ -55,7 +55,7 @@
                 <div class="btn">
                     <button class="button1" type="submit">acceso</button>
                 </div>
-                <button class="button3">olvide contraseña</button>
+                <button class="button3">olvid contraseña</button>
             </form>
         </div>
     </div>
