Cambios-apertura y models

--- a/TABLAS/MARCAS/templates/registration/login.html
+++ b/TABLAS/MARCAS/templates/registration/login.html
@@ -25,7 +25,7 @@
                         name="username"
                         id="id_username"
                         value="{{ form.username.value }}"
-                        placeholder="Username"
+                        placeholder="Usuario"
                         autocomplete="off"
                         required
                     />
@@ -48,14 +48,14 @@
                         class="input-field"
                         name="password"
                         id="id_password"
-                        placeholder="Password"
+                        placeholder="Contraseña"
                         required
                     />
                 </div>
                 <div class="btn">
-                    <button class="button1" type="submit">acceso</button>
+                    <button class="button1" type="submit">Iniciar Sesion</button>
                 </div>
-                <button class="button3">olvid contraseña</button>
+                <button class="button3">Olvide Contraseña</button>
             </form>
         </div>
     </div>
