--- a/TABLAS/MARCAS/templates/tablas/LISTAR_CAJAS.html
+++ b/TABLAS/MARCAS/templates/tablas/LISTAR_CAJAS.html
@@ -42,7 +42,7 @@
             <td>{{ caja.total_ing }}</td>
             <td>{{ producto.total_egr }}</td>
 
-            <td><a name="" id="" class="btn btn-info" href="{% url 'editar_caja' producto.id %}" role="button">Editar</a> | <a name="" id="" class="btn btn-danger" href="{% url 'eliminar_caja' caja.id %}"
+            <td><a name="" id="" class="btn btn-info" href="{% url 'editar_caja' caja.id %}" role="button">Editar</a> | <a name="" id="" class="btn btn-danger" href="{% url 'eliminar_caja' caja.id %}"
                 role="button">Borrar</a></td>
           </tr>
 
