--- a/TABLAS/MARCAS/static/CSS/style.css
+++ b/TABLAS/MARCAS/static/CSS/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(../imagenes/5.jpg);
+    background-image: url(../imagenes/8.jpg);
     background-size: cover; 
     background-position: center center; 
     background-repeat: no-repeat; 
@@ -230,3 +230,147 @@ tr td {
     transform: translateY(2px);
 }
 
+/*-------------------------------------------------------------------------------------------------------------------------*/
+/*------------------- login Andia--------------------------*/ 
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 0.4em;
+    background-color: #171717;
+    border-radius: 15px;
+    transition: 0.4s ease-in-out;
+    margin: auto; /* Centra el formulario */
+    max-width: 400px; /* Ancho máximo del formulario */
+    width: 100%; /* Permite que el formulario ocupe el 100% del ancho disponible hasta el máximo */
+}
+
+.card {
+    background-image: linear-gradient(163deg, #f13d0694 0%, #e06908 100%);
+    border-radius: 40px;
+    transition: all 0.3s;
+    padding: 10px; /* Espaciado interno para la tarjeta */
+    margin: auto; /* Centra el formulario */
+    max-width: 400px; /* Ancho máximo del formulario */
+    width: 100%;
+}
+
+.card2 {
+    border-radius: 0;
+    transition: all 0.2s;
+}
+
+.card2:hover {
+    transform: scale(0.98);
+    border-radius: 20px;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 30px 1px rgba(245, 25, 25, 0.918);
+}
+
+#heading {
+    text-align: center;
+    margin: 2em;
+    color: rgb(255, 255, 255);
+    font-size: 1.2em;
+}
+
+.field {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 0.5em;
+    border-radius: 15px;
+    padding: 0.6em;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: #171717;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    height: 50px;
+    width: auto;
+}
+
+.input-icon {
+    height: 1.3em;
+    width: 1.3em;
+    fill: white;
+}
+
+.input-field {
+    background: none;
+    border: none;
+    width: 100%;
+    color: #d3d3d3;
+}
+
+.form .btn {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-top: 2.5em;
+}
+
+.button1, .button2, .button3 {
+    padding: 0.5em;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    transition: 0.4s ease-in-out;
+    background-color: #030000;
+    color: white;
+}
+
+.button1:hover, .button2:hover {
+    background-color: rgb(236, 226, 226);
+    color: rgba(139, 129, 129, 0.76);
+}
+
+.button3 {
+    margin-bottom: 3em;
+}
+
+.button3:hover {
+    background-color: rgb(5, 4, 4);
+    color: rgb(10, 9, 9);
+}
+/*------------------- login Andia--------------------------*/ 
+/*------------------- insertar css de lo que se hace aki --------------------------*/ 
+/*------------------- Ventana emergente(modal) del monto inicial--------------------------*/
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+}
